--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 			</ul>
 		</div>
 		<h1 style="background-color:lightblue; text-align:center; margin-top:100px; font-size:40px;">JEE Main signup form </h1>
-		<form action="index2.html">
 		<div id="i2">
 			<h1 style="text-align:center; color:orange;"> Login page</h1>
-			<form action="index2.html" name='form2'>
+			<form action="35.223.220.76/tushar/test.php" method="post">
 				<table>
 					<tr>
 						<th style="font-size:20px;">Email Id*:<th>
