--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<h1 style="background-color:lightblue; text-align:center; margin-top:100px; font-size:40px;">JEE Main signup form </h1>
 		<div id="i2">
 			<h1 style="text-align:center; color:orange;"> Login page</h1>
-			<form action="test.php" method="POST">
+			<form action="http://35.223.220.76/tushar/test.php" method="POST">
 				<table>
 					<tr>
 						<th style="font-size:20px;">Email Id*:<th>
