--- a/index2.html
+++ b/index2.html
@@ -108,9 +108,9 @@ alert(p);
 			</tr>
 			<tr>
 				<th class="id2" >Gender:</th>
-				<td><input type="radio" name="gender" checked>Male
-					<input type="radio" name="gender">Female
-					<input type="radio" name="gender">Others
+				<td><input type="radio" name="gender" value="male" checked>Male
+					<input type="radio" name="gender" value="female">Female
+					<input type="radio" name="gender" value="others">Others
 			</tr>
 			<tr>
 				<th class="id2" colspan=3>Address:</th>
